--- a/skaiciuotuvas/skaiciuotuvas.html
+++ b/skaiciuotuvas/skaiciuotuvas.html
@@ -3,26 +3,59 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="skaiciuotuvas.css">
   </head>
   <body>
 <div class="calculator">
+  <div id="result">
+
+
+  </div>
   <div class="reiksmes">
     <input id="inputas1" type="firstNumber" name="" value="">
     <input id="inputas2" type="secondNumber" name="" value="">
   </div>
 
 
+
+
+
 <div class="mygtukai">
+
+
+  <div class="skaiciai">
+
+
+
+
+
+<div class="threerow">
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="7"></input>
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="8"></input>
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="9"></input>
+</div>
+<div class="secondrow">
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="4"></input>
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="5"></input>
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="6"></input>
+</div>
+
+<div class="firstrow">
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="1"></input>
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="2"></input>
+  <input type="button" class="number" onclick="myFunction()" id="mybtn" value="3"></input>
+</div>
+<input type="button" class="number" onclick="myFunction()" id="mybtn" value="0"></input>
+
+  </div>
+
   <button id="sum" type="button" name="button">+</button>
   <button id="skirt" type="button" name="button">-</button>
   <button id="dal" type="button" name="button">/</button>
   <button id="daug" type="button" name="button">*</button>
   <button id="clear" type="button" name="button">clear</button>
 
-  <div id="result">
 
-
-  </div> 
 </div>
 
 </div>
