--- a/trikampiai/triangle.html
+++ b/trikampiai/triangle.html
@@ -16,7 +16,7 @@
   <button id="triangle" type="button" name="button">Triangle</button>
   <button id="pyramid" type="button" name="button">Trikampis</button>
   <button id="reverse" type="button" name="button">Reverse</button>
-  <button id="clear" type="button" name="button"></button>
+  <button id="clear" type="button" name="button">Clear</button>
 
 
 
