--- a/trikampiai/triangle.html
+++ b/trikampiai/triangle.html
@@ -13,10 +13,10 @@
   </div>
 
 
-  <button id="triangle" type="button" name="button">Triangle</button>
-  <button id="pyramid" type="button" name="button">Trikampis</button>
-  <button id="reverse" type="button" name="button">Reverse</button>
-  <button id="clear" type="button" name="button">Clear</button>
+  <input id="triangle" type="button" value="Triangle" name="button"></input>
+  <input id="pyramid" type="button" value="Trikampis" name="button"></input>
+  <input id="reverse" type="button" value="Reverse" name="button"></input>
+  <input id="clear" type="button" value="Clear" name="button"></input>
 
 
 
