sumitinimas,javascriptas,localStorage

--- a/Business card/index.html
+++ b/Business card/index.html
@@ -9,14 +9,29 @@
 
 
 <div class="businesscard">
-  <input id="fullname" type="text" name="name" value="">
 
+
+
+
+
+  <input id="fullname" type="text" name="name" value="">
   <input id="email" class="mailas" type="text" name="" value="">
   <input id="address" type="text" name="" value="">
   <input id="phonenumber" type="text" name="" value="">
   <input id="description" type="text" name="" value="">
 
-  <button id="miting" type="button" name="button">Submiting</button>
+
+
+
+  <button id="submiting" type="button" name="button">Submiting</button>
+
+
+
+  <div id="cardinfo" >
+
+  </div>
+
+
 </div>
 
 
@@ -26,7 +41,7 @@
 
 
 
-<script src="index.css" type="text/javascript"></script>
+<script src="index.js" type="text/javascript"></script>
 
   </body>
 </html>
