padarytas app saraso kurymui, pridejimas end, start, trinimas first, last, reverse

--- a/calculator/skaiciuotuvas.html
+++ b/calculator/skaiciuotuvas.html
@@ -33,7 +33,7 @@
     <button id="clear" type="button" name="button">clear</button>
 
 
-<div class="threerow">
+<!-- <div class="threerow">
   <input type="button" class="number" onclick="myFunction()" id="mybtn" value="7"></input>
   <input type="button" class="number" onclick="myFunction()" id="mybtn" value="8"></input>
   <input type="button" class="number" onclick="myFunction()" id="mybtn" value="9"></input>
@@ -51,7 +51,7 @@
 </div>
 <input type="button" class="number" onclick="myFunction()" id="mybtn" value="0"></input>
 
-  </div>
+  </div> -->
 
 
 
