mygtukas go first, mygtukas go last

--- a/Guests list/index.html
+++ b/Guests list/index.html
@@ -13,7 +13,8 @@
 
 
 
-    <input id="input" type="text" name="" value="">
+    <input id="input" type="text" name="sdvsdv" value="">
+    <input id="inputas" type="text" name="" value="">
 
 
 
@@ -23,6 +24,10 @@
   <button id="removefirst" type="button" name="button">Remove First</button>
   <button id="removelast" type="button" name="button">Remove Last</button>
   <button id="reverselist" type="button" name="button">Reverse List</button>
+
+    <button id="splices" type="button" name="button">Splice </button>
+     <button id="golast" type="button" name="button">Go to last </button>
+    <button id="gofirst" type="button" name="button">Go to first </button>
 
   <button id="sortaz" type="button" name="button">A-Z</button>
   <button id="sortza" type="button" name="button">Z-A</button>
