sortas veikiantis az ir za neveikiantis

--- a/Guests list/index.html
+++ b/Guests list/index.html
@@ -14,7 +14,7 @@
 
 
     <input id="input" type="text" name="sdvsdv" value="">
-    <input id="inputas" type="text" name="" value="">
+<!--     <input id="inputas" type="text" name="" value=""> -->
 
 
 
